--- a/client/components/layouts/layout.css
+++ b/client/components/layouts/layout.css
@@ -15,3 +15,28 @@ nav .brand-logo {
     line-height: 22px;
     padding: 14px 16px;
 }
+
+.main-pan {
+    min-height: 300px;
+}
+
+#main {
+    background-color: #e9eaed;
+    margin-top: 0;
+}
+
+.feed-link {
+    padding-left: 200px;
+}
+
+.side-nav {
+    top: 0;
+    margin: 0;
+    height: -moz-calc(100%);
+    padding-bottom: 60px;
+    padding-top: 64px;
+    background-color: #fff;
+    z-index: -1;
+    overflow-y: auto;
+    will-change: left;
+}
